tests/lox/errors/runtime_errors.lox
return;
1 + true;
// err: A return statement encountered outside the function/method context.
// err: Failed to evaluate the expression of the statement: [at column 3 in line 2] Operands of binary operator Plus must be two numbers or one of them must be a string, but the following were passed:
// err:     lhs: Number
// err:     rhs: Bool